--- a/views/cases.jade
+++ b/views/cases.jade
@@ -9,6 +9,8 @@
         th Area
         th Title
         th
+        th 
+          img#filter_bookmark(src='/static/ico/bookmark.png')
         th Creator
         th
         th
@@ -19,9 +21,10 @@
             td #{c.modalities} 
             td #{c.description}
             td 
-              a(href='/case/#{c.cid}/1') #{c.title}
+              a(href='/case/#{c.cid}/#{c.firstpage}') #{c.title}
             td
               img(src='/icons/#{c.language}.png')
+            td.bm(ID='#{c.cid}', style='width:24px')
             td
               a(href='https://twitter.com/intent/user?screen_name=#{c.creator}')
               @#{c.creator}
@@ -36,3 +39,9 @@
                   img.hidecase(ID='#{c.cid}', src='/icons/eye.png')
   a(href='/newcase')
     img.control(src='/icons/plus.png', style='margin-top:30px')
+script(type='text/javascript")
+  var bookmarks = [#{bookmarks}];
+  //alert(bookmarks);
+  for (var i = 0; i < bookmarks.length; i++){
+    $("td.bm#"+bookmarks[i]).html("<img src='/static/ico/bookmark.png'>");
+  }
