--- a/views/imagepage.jade
+++ b/views/imagepage.jade
@@ -6,6 +6,10 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
   a(href='https://twitter.com/intent/user?screen_name=#{creator}', title='Link to twitter')
     @#{creator}
   | &#x2002;
+  - if (bookmarked)
+    img.control.rmbookmark(ID='#{cid}', src='/icons/bookmark.png')
+  - else 
+    img.control.bookmark(ID='#{cid}', src='/icons/bookmark_bw.png')
   span#lock
     a.abutton#lock(title='Edit Page')
       span#locked
@@ -52,7 +56,7 @@ a#nextpage(href='/case/#{cid}/#{nextpage}')
       img.control.moveradiodown(style='display:none', src='/icons/arrow-270.png')
   img.control#addstack(style='display:none', src='/icons/plus.png')
 #markdown-help(style='display:none')
-  img#help_cancel(src='/icons/cross.png')
+  img.control.textedit.session(src='/icons/pencil.png')
   textarea.mdtxt(style='display:none')
     #{mdhelp}
   .md
