--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -2,6 +2,10 @@
     min-height 100%
 #markdown-help .textedit
     margin 0
+input#filter
+    position absolute
+    top 35px
+    right 5% 
 input.rounded
     -moz-border-radus 10px
     -webkit-border-radius 10px
@@ -9,9 +13,6 @@ input.rounded
     -moz-box-shadow 2px 2px 3px #222
     -webkit-box-shadow 2px 2px 3px #222
     box-shadow 2px 2px 3px #222
-    position absolute
-    top 35px
-    right 5% 
 tbody td
     background-color #444
     color #ccc
@@ -22,6 +23,21 @@ tbody td.odd
 td.hovered
     background-color lightblue
     color #666
+th
+    line-height 250%
+th.sortable
+    color #ccc
+    cursor pointer
+th.sortable:hover
+    color white
+th.sorted-asc 
+    background-image url("/static/ico/control-270.png")
+    background-repeat no-repeat
+    background-position 50% 100%
+th.sorted-desc
+    background-image url("/static/ico/control-090.png")
+    background-repeat no-repeat
+    background-position 50% 100%
 .hidecase
     cursor pointer
     vertical-align middle
@@ -156,7 +172,7 @@ span#controls
     margin 0 auto
     width 90%
     overflow auto
-    padding-bottom 30px
+    padding-bottom 50px
 #indexpage
     text-align center
 #userinfo
@@ -208,11 +224,12 @@ span#controls
     border-color #aaa
 #footer
     position relative
-    margin-top -30px
-    height 30px
+    margin-top -50px
+    height 50px
     text-align center
     clear both
     width 100% 
+    padding-top 20px
 #session
     float right
     height 20px
@@ -265,8 +282,11 @@ span#controls
     background-image url("/images/paper/Texture0213.jpg")
     color #006
 @media screen and (max-width: 450px)
-    input.rounded
-        right 0px
+    input#filter
+        position absolute
+        top 60px
+        right 50% 
+        margin-right -65px
     #markdown-help
         width 100%
     #sl
