--- a/views/cases.jade
+++ b/views/cases.jade
@@ -16,7 +16,7 @@
     tbody
       - each c in cases
         - if (c.hidden == 'false' || c.creator == user || user == 'radioca1se')
-          tr 
+          tr(ID="#{c.cid}") 
             td #{c.modalities} 
             td #{c.description}
             td 
