--- a/views/about.jade
+++ b/views/about.jade
@@ -17,62 +17,72 @@
   table#cheatsheet
     tr
       td
-        img.control(src='/icons/question.png') 
+        img.control(src='/static/ico/question.png') 
       td Markdown help
       td
-        img.control(src='/icons/box.png')
+        img.control(src='/static/ico/box.png')
       td Metadata / Categorize
     tr
       td
-        img.control(src='/icons/plus.png')
+        img.control(src='/static/ico/plus.png')
       td Add page / image 
       td
-        img.control(src='/icons/minus.png')
+        img.control(src='/static/ico/minus.png')
       td Delete page / case
     tr
       td
-        img.control(src='/icons/eye.png')
+        img.control(src='/static/ico/eye.png')
       td Case visible
       td
-        img.control(src='/icons/eye-prohibition.png')
+        img.control(src='/static/ico/eye-prohibition.png')
       td Case hidden
     tr
       td
-        img.control(src='/icons/arrow-090.png')
+        img.control(src='/static/ico/arrow-090.png')
       td Move image up
       td
-        img.control(src='/icons/arrow-270.png')
+        img.control(src='/static/ico/arrow-270.png')
       td Move image down
     tr
       td
-        img.control(src='/icons/disc.png') 
+        img.control(src='/static/ico/disc.png') 
       td Save page
       td
-        img.control(src='/icons/cross.png')
+        img.control(src='/static/ico/cross.png')
       td Remove image
     tr
       td
-        img.control(src='/icons/pencil.png')
+        img.control(src='/static/ico/pencil.png')
       td Edit page / text
       td  
-        img.control(src='/icons/tick.png')
+        img.control(src='/static/ico/tick.png')
       td Done
     tr
       td
-        img.control(src='/icons/arrow-180.png')
+        img.control(src='/static/ico/arrow-180.png')
       td Previous page
       td
-        img.control(src='/icons/arrow.png') 
+        img.control(src='/static/ico/arrow.png') 
       td Next page
     tr
       td 
-        img.control(src='/icons/bookmark.png')
-      td Bookmark
+        img.control(src='/static/ico/star.png')
+      td Favorite
       td
         img.control(src='/icons/balloon.png')
       td Feedback
+    tr
+      td
+        img.control(src='/static/ico/server.png')
+      td Case list
   br
   hr
+  br
+  ul
+    li To filter and only show your favorites type \#fav into the box at the case list. 
+    li Type your username into the box to filter and only show your cases.
+    li Type \#se for Swedish cases, \#es for Spanish and \#gb for English.
+  br
   br
   | Please see
   a(href="/stat/colophon") colophon
