--- a/views/colophon.jade
+++ b/views/colophon.jade
@@ -1,10 +1,10 @@
 #topleftdiv
 #colophon
   p
-    | Application made with <a href=http://nodejs.org/> node.js </a> and <a href=http://expressjs.com> express.js</a>, templates in <a href=http://jade-lang.com/>jade</a>, styled with <a href=http://learnboost.github.com/stylus/>stylus</a>. Written in <a href=http://daringfireball.net/projects/markdown/>markdown</a>, backed by <a href=http://redis.io>redis</a>, hosted on <a href=http://linode.com/>linode</a>. 
+    | Application made with <a href=http://nodejs.org/> node.js </a> and <a href=http://expressjs.com> express.js</a>, backed by <a href=http://redis.io>redis</a>, hosted on <a href=http://linode.com/>linode</a>. 
     
   p
-    | Some icons by <a href="http://p.yusukekamiyamane.com">Yusuke Kamiyamane</a>. All rights reserved. Licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>.    
+    | Icons by <a href="http://p.yusukekamiyamane.com">Yusuke Kamiyamane</a>. All rights reserved. Licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>.    
 
 
   p
