--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,3 +1,15 @@
+.maximizeradio, .minimizeradio
+    position absolute
+    top 0
+    right 0
+#maximized
+    display none
+    position absolute
+    width 90%
+    max-width 90%
+    max-height 90%
+    top 5% 
+    left 5%
 #newcase > .control
     margin 10px
 .caseListTitle
@@ -301,11 +313,8 @@ span#controls
     .caseListTitle
         margin-top -10px
     input#filter
-        position absolute
-        left 0px
+        right 0px
         top 55px
-        right 50% 
-        margin-right 70px
     #markdown-help
         width 100%
     #sl
