--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,6 +28,7 @@ html
           #userinfo(style='display:none')
             a(id='sign_out') sign out
         != body // this renders the body of an individual view
+      #maximized
       #horizon
         #newpage_dialog.dialog_box(style='display:none')
           h2.damion(style='text-align:left') Create new page
