--- a/views/imagepage.jade
+++ b/views/imagepage.jade
@@ -17,21 +17,21 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
   span#lock
     a.abutton#lock(title='Edit Page')
       span#locked
-        img.control(src='/icons/pencil.png')
+        img.control(src='/static/ico/pencil.png')
       span#open
-        img.control(src='/icons/tick.png')
+        img.control(src='/static/ico/tick.png')
   span#controls
-    img.control#help(src='/icons/question.png')
-    img.control#savepage(src='/icons/disc.png')
+    img.control#help(src='/static/ico/question.png')
+    img.control#savepage(src='/static/ico/disc.png')
     span#savepage_dialog(style='display:none')
       button(id='savepage_confirm', type='button')
         | Save page
-    img.control#deletepage(src='/icons/minus.png')
+    img.control#deletepage(src='/static/ico/minus.png')
     span#deletepage_dialog(style='display:none')
       button(id='deletepage_confirm', type='button')
         | Delete Page
-    img.control#newpage(src='/icons/plus.png')
-    img.control#boxit(src='/icons/box.png')
+    img.control#newpage(src='/static/ico/plus.png')
+    img.control#boxit(src='/static/ico/box.png')
   #created(style='display:none')
     | #{created}
 #title
@@ -39,11 +39,11 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     textarea.mdtxt(style='display:none')
       ##{title}
     .md
-    img.control.textedit.session(src='/icons/pencil.png')
+    img.control.textedit.session(src='/static/ico/pencil.png')
 a#prevpage(href='/case/#{cid}/#{prevpage}')
-  img.control(src='/icons/arrow-180.png')
+  img.control(src='/static/ico/arrow-180.png')
 a#nextpage(href='/case/#{cid}/#{nextpage}')
-  img.control(src='/icons/arrow.png')
+  img.control(src='/static/ico/arrow.png')
 #imagepageradios
   - each r in radios
     .radio.radioimagepage(id='#{r.ID}')
@@ -54,17 +54,18 @@ a#nextpage(href='/case/#{cid}/#{nextpage}')
         textarea.mdtxt(style='display:none')
           #{r.caption}
         .md
-        img.control.textedit.session(src='/icons/pencil.png')
-      img.control.removeradio(style='display:none', src='/icons/cross.png')
-      img.control.moveradioup(style='display:none', src='/icons/arrow-090.png')
-      img.control.moveradiodown(style='display:none', src='/icons/arrow-270.png')
-  img.control#addstack(style='display:none', src='/icons/plus.png')
+        img.control.textedit.session(src='/static/ico/pencil.png')
+      img.control.removeradio(style='display:none', src='/static/ico/cross.png')
+      img.control.moveradioup(style='display:none', src='/static/ico/arrow-090.png')
+      img.control.moveradiodown(style='display:none', src='/static/ico/arrow-270.png')
+  img.control#addstack(style='display:none', src='/static/ico/plus.png')
 #markdown-help(style='display:none')
-  img.control.textedit.session(src='/icons/pencil.png')
+  img.control.textedit.session(src='/static/ico/pencil.png')
+  img.control.Cancel(src='/static/ico/cross-circle.png')
   textarea.mdtxt(style='display:none')
     #{mdhelp}
   .md
-img.control#feedbackbutton(src='/icons/balloon.png')
+img.control#feedbackbutton(src='/static/ico/balloon.png')
 #feedbackarea(style='display:none')
   #feedbacktext
   textarea#feedbackbox
