--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,7 +20,7 @@ html
     #wrap
       #sl
         a(href='/cases/0/-1')
-          img(src='/images/RADIOCA.SE_small_logo.png')
+          img(src='/static/img/RADIOCA.SE_small_logo.png')
           //img#db(src='/static/ico/server.png')
       #container
         #usercontrols
@@ -30,23 +30,32 @@ html
         != body // this renders the body of an individual view
       #maximized
       #horizon
+        #newcase_dialog.dialog_box(style='display:none')
+          h1.damion(style='text-align:left') Create new case
+          h3 - Choose page layout for first page
+          #pagetype
+            img.pageimage#casestandardpage(src='/static/img/standardpage.svg', alt='Standard')
+            img.pageimage#casetextpage(src='/static/img/textpage.svg', alt='Textpage')
+            img.pageimage#caseimagepage(src='/static/img/imagepage.svg', alt='Imagepage')
+          a.Cancel
+            img(src="/static/ico/cross-circle.png")
         #newpage_dialog.dialog_box(style='display:none')
           h2.damion(style='text-align:left') Create new page
           h4 - Choose page layout.
           #pagetypes
-            img.pageimage#newpage_standard(src='/images/standardpage.svg', alt='Standard')
-            img.pageimage#newpage_text(src='/images/textpage.svg', alt='Textpage')
-            img.pageimage#newpage_image(src='/images/imagepage.svg', alt='Imagepage')
-          button#newpage_cancel
-            | Cancel
+            img.pageimage#newpage_standard(src='/static/img/standardpage.svg', alt='Standard')
+            img.pageimage#newpage_text(src='/static/img/textpage.svg', alt='Textpage')
+            img.pageimage#newpage_image(src='/static/img/imagepage.svg', alt='Imagepage')
+          a.Cancel
+            img(src="/static/ico/cross-circle.png")
         #deletecase_dialog.dialog_box(style='display:none')
           | Do you want to delete this case?
           br
           br
           button#deletecase_confirm(type='button')
             | Delete
-          button#deletecase_cancel(type='button')
-            | Cancel
+          a.Cancel
+            img(src="/static/ico/cross-circle.png")
         #boxit_dialog.dialog_box(style='display:none')
           | Please check applicable language, modalities and areas
           br
@@ -100,6 +109,8 @@ html
             | Pediatric
             input.description#other(type='checkbox', value='#other')
             | Other
+          a.Cancel
+            img(src="/static/ico/cross-circle.png")
 
         #addstack_dialog.dialog_box(style='display:none')
           | Please choose image(s) to upload.
@@ -117,30 +128,27 @@ html
                 button
                   | Browse
             input.input1(id='addstack_confirm', type='submit', value='Upload file(s)')
-            button(id='addstack_cancel')
-              | cancel
+            a.Cancel
+              img(src="/static/ico/cross-circle.png")
         #removeradio_dialog.dialog_box(style='display:none')
           | Do you want to remove the selected stack/radio from this page?
           br
           br
           button#removeradio_confirm(type='button')
             | Remove radio
-          button#removeradio_cancel(type='button')
-            | Cancel
+          a.Cancel
+            img(src="/static/ico/cross-circle.png")
         #deleteradio_dialog.dialog_box(style='display:none')
           | Do you want to delete the selected stack/radio from your collection?
           br
           br
           button#deleteradio_confirm(type='button')
             | Delete
-          button#deleteradio_cancel(type='button')
-            | Cancel
+          a.Cancel
+            img(src="/static/ico/cross-circle.png")
     #footer
       a(href='/')
         | Home
-      | &#x2002;
-      a(href='/cases/0/-1')
-        | Cases
       | &#x2002;
       a(href='/stat/about')
         | About
