--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -19,21 +19,21 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
   span#lock
     a.abutton#lock(title='Edit Page')
       span#locked
-        img.control(src='/icons/pencil.png')
+        img.control(src='/static/ico/pencil.png')
       span#open
-        img.control(src='/icons/tick.png')
+        img.control(src='/static/ico/tick.png')
   span#controls
-    img.control#help(src='/icons/question.png')
-    img.control#savepage(src='/icons/disc.png')
+    img.control#help(src='/static/ico/question.png')
+    img.control#savepage(src='/static/ico/disc.png')
     span#savepage_dialog(style='display:none')
       button(id='savepage_confirm', type='button')
         | Save page
-    img.control#deletepage(src='/icons/minus.png')
+    img.control#deletepage(src='/static/ico/minus.png')
     span#deletepage_dialog(style='display:none')
       button(id='deletepage_confirm', type='button')
         | Delete Page
-    img.control#newpage(src='/icons/plus.png')
-    img.control#boxit(src='/icons/box.png')
+    img.control#newpage(src='/static/ico/plus.png')
+    img.control#boxit(src='/static/ico/box.png')
   #created(style='display:none')
     | #{created}
 #title
@@ -41,23 +41,23 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     textarea.mdtxt(style='display:none')
       ##{title}
     .md
-    img.control.textedit.session(src='/icons/pencil.png')
+    img.control.textedit.session(src='/static/ico/pencil.png')
 a#prevpage(href='/case/#{cid}/#{prevpage}')
-  img.control(src='/icons/arrow-180.png')
+  img.control(src='/static/ico/arrow-180.png')
 a#nextpage(href='/case/#{cid}/#{nextpage}')
-  img.control(src='/icons/arrow.png')
+  img.control(src='/static/ico/arrow.png')
 #texts
   .txt
     textarea.mdtxt(style='display:none')
       #{texts}
     .md
-    img.control.textedit.session(src='/icons/pencil.png')
+    img.control.textedit.session(src='/static/ico/pencil.png')
   br
   br
 #radios
   - each r in radios
     .radio(id='#{r.ID}')
-      .stack
+      .stack(tabindex='-1')
         - if (r.images)
           - each i in r.images
             img.stack_image(src='#{i}')
@@ -72,11 +72,12 @@ a#nextpage(href='/case/#{cid}/#{nextpage}')
       br
   img.control#addstack(style='display:none', src='/icons/plus.png')
   #markdown-help(style='display:none')
+    img.control.textedit.session(src='/static/ico/pencil.png', style='position:absolute;top:8px;right:8px')
+    img.control.Cancel(src='/static/ico/cross-circle.png', style='right:-24px')
     textarea.mdtxt(style='display:none')
       #{mdhelp}
     .md
-    img.control.textedit.session(src='/icons/pencil.png')
-img.control#feedbackbutton(src='/icons/balloon.png')
+img.control#feedbackbutton(src='/static/ico/balloon.png')
 #feedbackarea(style='display:none')
   #feedbacktext
   textarea#feedbackbox
