--- a/views/textpage.jade
+++ b/views/textpage.jade
@@ -6,10 +6,6 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
   a(href='https://twitter.com/intent/user?screen_name=#{creator}', title='Link to twitter')
     @#{creator}
   | &#x2002;
-  // if (completed)
-  //  img.control.rmcompleted(ID='#{cid}', src='/static/ico/ui-color-picker-tick.png')
-  // else
-  //  img.control.completed(ID='#{cid}', src='/static/ico/ui-color-picker.png')
   - if (bookmarked)
     img.control.rmbookmark(ID='#{cid}', src='/static/ico/star.png')
   - else 
@@ -17,21 +13,21 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
   span#lock
     a.abutton#lock(title='Edit Page')
       span#locked
-        img.control(src='/icons/pencil.png')
+        img.control(src='/static/ico/pencil.png')
       span#open
-        img.control(src='/icons/tick.png')
+        img.control(src='/static/ico/tick.png')
   span#controls
-    img.control#help(src='/icons/question.png')
-    img.control#savepage(src='/icons/disc.png')
+    img.control#help(src='/static/ico/question.png')
+    img.control#savepage(src='/static/ico/disc.png')
     span#savepage_dialog(style='display:none')
       button(id='savepage_confirm', type='button')
         | Save page
-    img.control#deletepage(src='/icons/minus.png')
+    img.control#deletepage(src='/static/ico/minus.png')
     span#deletepage_dialog(style='display:none')
       button(id='deletepage_confirm', type='button')
         | Delete Page
-    img.control#newpage(src='/icons/plus.png')
-    img.control#boxit(src='/icons/box.png')
+    img.control#newpage(src='/static/ico/plus.png')
+    img.control#boxit(src='/static/ico/box.png')
   #created(style='display:none')
     | #{created}
 #title
@@ -39,25 +35,26 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     textarea.mdtxt(style='display:none')
       ##{title}
     .md
-    img.control.textedit.session(src='/icons/pencil.png')
+    img.control.textedit.session(src='/static/ico/pencil.png')
 a#prevpage(href='/case/#{cid}/#{prevpage}')
-  img.control(src='/icons/arrow-180.png')
+  img.control(src='/static/ico/arrow-180.png')
 a#nextpage(href='/case/#{cid}/#{nextpage}')
-  img.control(src='/icons/arrow.png')
+  img.control(src='/static/ico/arrow.png')
 #texts(style='width: 100%')
   .txt
     textarea.mdtxt(style='display:none')
       #{texts}
     .md
-    img.control.textedit.session(src='/icons/pencil.png')
+    img.control.textedit.session(src='/static/ico/pencil.png')
   br
   br
 #markdown-help(style='display:none')
-  img.control.textedit.session(src='/icons/pencil.png')
+  img.control.textedit.session(src='/static/ico/pencil.png')
+  img.control.Cancel(src='/static/ico/cross-circle.png')
   textarea.mdtxt(style='display:none')
     #{mdhelp}
   .md
-img.control#feedbackbutton(src='/icons/balloon.png')
+img.control#feedbackbutton(src='/static/ico/balloon.png')
 #feedbackarea(style='display:none')
   #feedbacktext
   textarea#feedbackbox
