--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,7 +24,8 @@ html
           //img#db(src='/static/ico/server.png')
       #container
         #usercontrols
-          a#sign_in Sign in with twitter
+          a#sign_in
+            img(src='/static/img/sign-in-with-twitter-d.png')
           #userinfo(style='display:none')
             a(id='sign_out') sign out
         != body // this renders the body of an individual view
