--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -49,7 +49,8 @@
     top -12px
     right -12px
 #newcase
-    margin 10px 0 0 0 
+    position absolute
+    top 60px
 .maximizeradio, .minimizeradio
     position absolute
     top 0
@@ -64,8 +65,6 @@
     left 5%
 #newcase > .control
     margin 10px
-.caseListTitle
-    margin-bottom 0
 .invisible
     display none
 #db
@@ -76,15 +75,18 @@
     float right 
 #usercontrols
     float right
-    padding-top 5px
+    padding-top 15px
 #wrap
     min-height 100%
 #markdown-help .textedit
     margin 0
+input#filter:focus
+    width 25%
 input#filter
     position absolute
     top 60px
     right 5% 
+    width 75px
 input.rounded
     -moz-border-radus 10px
     -webkit-border-radius 10px
@@ -267,7 +269,7 @@ span#controls
     text-shadow #CCC -2px 2px 3px
     font-weight bold
     font-size 50pt
-    margin-top 30px
+    margin-top 50px
 .orbitron
     color #bca 
     font-family "Orbitron"
@@ -351,6 +353,7 @@ span#controls
     width 100%
     float left
     text-align center
+    margin-top 10px
 #texts
     width 50%
     float right
@@ -359,18 +362,15 @@ span#controls
     background-image url("/images/paper/Texture0213.jpg")
     color #006
 @media screen and (max-width: 450px)
-    #caseListTitle
-        margin-top -15px
-        margin-bottom 15px
-    #newcase
-        margin 10px 
+    #cases
+        margin-top 20px
+    .caseListTitle
+        position absolute
+        top 10px
     #db
         display none
-    .caseListTitle
-        margin-top -10px
     input#filter
         right 0px
-        top 50px
     #markdown-help
         width 100%
     #sl
