--- a/views/cases.jade
+++ b/views/cases.jade
@@ -1,8 +1,8 @@
 #topleftdiv
 #cases
+  img.control#newcase(src='/icons/plus.png')
   h1.damion.caseListTitle Cases
   input.rounded(type='text', name='filter', value='Type to filter', id='filter')
-  img.control#newcase(src='/icons/plus.png')
   table#cases
     thead
       tr 
@@ -27,18 +27,16 @@
             td.invisible
               //a(href='https://twitter.com/intent/user?screen_name=#{c.creator}')
               @#{c.creator}
-            td(style='width:24px')
+            td.eye(style='width:24px')
               - if (c.creator == user || user == 'radioca1se') 
                 - if (c.hidden=='true')
                   img.showcase(ID='#{c.cid}', src='/icons/eye-prohibition.png')
                 - else
                   img.hidecase(ID='#{c.cid}', src='/icons/eye.png')
-            //td
-            //  img(src='/icons/#{c.language}.png')
-            //  .hidden ##{c.language}
-            td(ID='#{c.cid}bm')
-            td(ID='#{c.cid}cc')
-            td(style='width:24px')
+            td.invisible ##{c.language}
+            td.invisible(ID='#{c.cid}bm')
+            td.invisible(ID='#{c.cid}cc')
+            td.invisible(style='width:24px')
               - if (c.creator == user) 
                 img.deletecase(ID='#{c.cid}', src='/icons/minus.png')
 script(type='text/javascript")
@@ -48,13 +46,5 @@ script(type='text/javascript")
     $("#"+completed[i]+"cc").html("<img src='/static/ico/ui-color-picker-tick.png'><div style='display:none'>#cc</div>"); 
     }
   for (var i = 0; i < bookmarks.length; i++){
-  //alert(bookmarks[i]);
-    $("#"+bookmarks[i]+"bm").html("<img src='/static/ico/star-small.png'><div style='display:none'>#fav</div>");
+    $("#"+bookmarks[i]+"bm").html("<img src='/static/ico/star-small.png'><div style='display:none'>#fav</div>").show();
   }
-  //$(".lastEdit").each(function(){
-  //  var lastEdit = new Date(parseInt($(this).html(),10));
-  //  var year = lastEdit.getFullYear();
-  //  var month = lastEdit.getMonth() + 1;
-  //  var day = lastEdit.getDay();
-  //  $(this).html(year + "/" + month + "/" + day).show();
-  //  });
