--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -238,7 +238,7 @@ span#controls
 #title>.txt>.mdtxt
     text-align center
 #title>.txt>.md
-    background-image url('/images/OffGray.jpg')
+    background-image url('/static/img/OffGray.jpg')
     margin 0 auto
     text-align center
 .txt>.abutton
@@ -248,7 +248,7 @@ span#controls
     margin -20px 0px 0px 0px
     display none
 .paper
-    background-image url("/images/paper/Texture0213.jpg")
+    background-image url("/static/img/paper/Texture0213.jpg")
 .abutton
     cursor pointer
     font-size 1.2em
@@ -359,7 +359,7 @@ span#controls
     float right
     clear both
 .txt
-    background-image url("/images/paper/Texture0213.jpg")
+    background-image url("/static/img/paper/Texture0213.jpg")
     color #006
 @media screen and (max-width: 450px)
     #cases
@@ -431,7 +431,7 @@ textarea
 .mdtxt
     float left
 #markdown-help
-    background-image url("/images/paper/Texture0213.jpg")
+    background-image url("/static/img/paper/Texture0213.jpg")
     color #006
     position absolute
     width 45%
@@ -475,7 +475,7 @@ body
     background-color #333
     line-height 1
     height 100%
-    background-image url('/images/OffGray.jpg')
+    background-image url('/static/img/OffGray.jpg')
 h1, h2
     color #e90
     font-weight 400
