--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -51,6 +51,7 @@
 #newcase
     position absolute
     top 60px
+    left 5%
 .maximizeradio, .minimizeradio
     position absolute
     top 0
@@ -362,6 +363,8 @@ span#controls
     background-image url("/static/img/paper/Texture0213.jpg")
     color #006
 @media screen and (max-width: 450px)
+    #newcase
+        left 0%
     #cases
         margin-top 20px
     .caseListTitle
