--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,12 +1,11 @@
-.sign_in_with_twitter
-    height 60px
-    width 280px
-    position relative
-.sign_in_with_twitter button
-    height 58px
-    width 350px
+.orange
+    color #ff9900
+.bookmark
+    cursor pointer
+.rmbookmark
+    cursor pointer
+.sign_in_with_twitter     
     text-align right
-    padding-right 23px
     color #293f46
     text-shadow #fff 1px 1px 1px
     border 2px solid #B1D4DC
@@ -14,9 +13,7 @@
     background #c1e6ea -moz-linear-gradient(center bottom, rgb(161,200,209) 0%, rgb(211,245,246) 81%)
     -webkit-border-radius 8px
     -moz-border-radius 8px
-    font bold 24px "Lucida Grande"
-    position absolute
-.sign_in_with_twitter.darker button
+.sign_in_with_twitter.darker 
     color #fff
     text-shadow #2f808f -1px -1px 1px
     border 2px solid #1d7285
@@ -47,7 +44,7 @@
 .Cancel
     position absolute
     top -12px
-    right -12px
+    left -24px
 #newcase
     position absolute
     top 60px
@@ -154,7 +151,6 @@ th.sorted-desc
 .control
     cursor pointer 
     margin 0 10px
-    height 24px
 button
     height 21px
     vertical-align top
@@ -234,8 +230,6 @@ span#controls
     width 55%
 #title
     margin-top 20px
-#title>.txt>.textedit
-    margin-top -2em
 #title>.txt>.mdtxt
     text-align center
 #title>.txt>.md
@@ -480,7 +474,7 @@ body
     height 100%
     background-image url('/static/img/OffGray.jpg')
 h1, h2
-    color #e90
+    color #ddd
     font-weight 400
 h1, h2, h3, h4, h5, p 
     margin-bottom 24px
