--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@
   br
   img(src='/static/img/OldRadio_3_320.png', style='width: 320px')
 
-  h1.damion -Welcome
+  h1.damion.orange -Welcome
   br
   a(href='/cases/0/-1') 
     h4.orbitron List cases
