--- a/views/cases.jade
+++ b/views/cases.jade
@@ -1,7 +1,7 @@
 #topleftdiv
 #cases
-  img.control#newcase(src='/static/ico/plus.png')
-  h1.damion.caseListTitle Cases
+  img.control#newcase(src='/static/ico/plus_bw.png')
+  h1.damion.caseListTitle.orange Cases
   input.rounded(type='text', name='filter', value='Type to filter', id='filter')
   table#cases
     thead
