--- a/views/disclaimer.jade
+++ b/views/disclaimer.jade
@@ -5,5 +5,5 @@
   p
     | Remember to <b>ANONYMIZE ALL PATIENT RELATED INFORMATION</b>. If you for some reason don't want to share a specific case with other users you have the option of hiding it from them on the caselist, but the default is set so that everything you add is shared.  
   p
-   | Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. It is free to use for the moment. In the future, once it's up and running smoothly and has outgrown it's current linode (about 20Gb of storage) I will probably look into models for charging to keep the site growing. I guess it will come to a one-time sign up fee of about $10-20 - roughly half the price of one pay-per view article of an academic publisher - and I would like to think that this site in the end might be more useful than half an article...(Especially considering that half an article would lack a discussion and conclusion)
-
+   | Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. It is free to use, and I intend to keep it so.
+    
