--- a/views/imagepage.jade
+++ b/views/imagepage.jade
@@ -6,14 +6,10 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
   a(href='https://twitter.com/intent/user?screen_name=#{creator}', title='Link to twitter')
     @#{creator}
   | &#x2002;
-  // if (completed)
-  //  img.control.rmcompleted(ID='#{cid}', src='/static/ico/ui-color-picker-tick.png')
-  // else
-  //img.control.completed(ID='#{cid}', src='/static/ico/ui-color-picker.png')
   - if (bookmarked)
-    img.control.rmbookmark(ID='#{cid}', src='/static/ico/star.png')
+    img.rmbookmark(ID='#{cid}', src='/static/ico/star.png')
   - else 
-    img.control.bookmark(ID='#{cid}', src='/static/ico/star-empty.png')
+    img.bookmark(ID='#{cid}', src='/static/ico/star-empty.png')
   span#lock
     a.abutton#lock(title='Edit Page')
       span#locked
@@ -61,7 +57,7 @@ a#nextpage(href='/case/#{cid}/#{nextpage}')
   img.control#addstack(style='display:none', src='/static/ico/plus.png')
 #markdown-help(style='display:none')
   img.control.textedit.session(src='/static/ico/pencil.png')
-  img.control.Cancel(src='/static/ico/cross-circle.png')
+  img.control.control.Cancel(src='/static/ico/cross-circle.png')
   textarea.mdtxt(style='display:none')
     #{mdhelp}
   .md
