--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -9,27 +9,27 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     @#{creator}
   | &#x2002;
   - if (bookmarked)
-    img.control.rmbookmark(ID='#{cid}', src='/static/ico/star.png')
+    img.rmbookmark(ID='#{cid}', src='/static/ico/star.png')
   - else 
-    img.control.bookmark(ID='#{cid}', src='/static/ico/star-empty.png')
+    img.bookmark(ID='#{cid}', src='/static/ico/star-empty.png')
   span#lock
     a.abutton#lock(title='Edit Page')
       span#locked
-        img.control(src='/static/ico/pencil.png')
+        img.control(src='/static/ico/pencil_bw.png')
       span#open
-        img.control(src='/static/ico/tick.png')
+        img.control(src='/static/ico/tick_bw.png')
   span#controls
-    img.control#help(src='/static/ico/question.png')
-    img.control#savepage(src='/static/ico/disc.png')
+    img.control#help(src='/static/ico/question_bw.png')
+    img.control#savepage(src='/static/ico/disc_bw.png')
     span#savepage_dialog(style='display:none')
       button(id='savepage_confirm', type='button')
         | Save page
-    img.control#deletepage(src='/static/ico/minus.png')
+    img.control#deletepage(src='/static/ico/minus_bw.png')
     span#deletepage_dialog(style='display:none')
       button(id='deletepage_confirm', type='button')
         | Delete Page
-    img.control#newpage(src='/static/ico/plus.png')
-    img.control#boxit(src='/static/ico/box.png')
+    img.control#newpage(src='/static/ico/plus_bw.png')
+    img.control#boxit(src='/static/ico/box_bw.png')
   #created(style='display:none')
     | #{created}
 #title
@@ -37,17 +37,17 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     textarea.mdtxt(style='display:none')
       ##{title}
     .md
-    img.control.textedit.session(src='/static/ico/pencil.png')
+    img.control.textedit.session(src='/static/ico/pencil_bw.png')
 a#prevpage(href='/case/#{cid}/#{prevpage}')
-  img.control(src='/static/ico/arrow-180.png')
+  img(src='/static/ico/arrow-180.png')
 a#nextpage(href='/case/#{cid}/#{nextpage}')
-  img.control(src='/static/ico/arrow.png')
+  img(src='/static/ico/arrow.png')
 #texts
   .txt
     textarea.mdtxt(style='display:none')
       #{texts}
     .md
-    img.control.textedit.session(src='/static/ico/pencil.png')
+    img.control.textedit.session(src='/static/ico/pencil_bw.png')
   br
   br
 #radios
@@ -57,23 +57,21 @@ a#nextpage(href='/case/#{cid}/#{nextpage}')
         - if (r.images)
           - each i in r.images
             img.stack_image(src='#{i}')
-      img.control.removeradio(style='display:none', src='/static/ico/cross.png')
-      //img.control.maximizeradio(src='/static/ico/arrow-315.png')
-      //img.control.minimizeradio(src='/static/ico/arrow-135.png', style='display:none')
+      img.control.removeradio(style='display:none', src='/static/ico/cross_bw.png')
       .caption
         textarea.mdtxt(style='display:none')
           #{r.caption}
         .md
-        img.control.textedit(src='/static/ico/pencil.png')
+        img.control.textedit(src='/static/ico/pencil_bw.png')
       br
-  img.control#addstack(style='display:none', src='/static/ico/plus.png')
+  img.control#addstack(style='display:none', src='/static/ico/plus_bw.png')
   #markdown-help(style='display:none')
-    img.control.textedit.session(src='/static/ico/pencil.png', style='position:absolute;top:8px;right:8px')
-    img.control.Cancel(src='/static/ico/cross-circle.png', style='right:-24px')
+    img.control.textedit.session(src='/static/ico/pencil_bw.png', style='position:absolute;top:8px;right:8px')
+    img.control.Cancel(src='/static/ico/cross-circle_bw.png', style='right:-24px')
     textarea.mdtxt(style='display:none')
       #{mdhelp}
     .md
-img.control#feedbackbutton(src='/static/ico/balloon.png')
+img.control#feedbackbutton(src='/static/ico/balloon_bw.png')
 #feedbackarea(style='display:none')
   #feedbacktext
   textarea#feedbackbox
