three finger slow scroll

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,3 +1,5 @@
+.blackshadow
+    black -2px 2px 3px
 .orange
     color #ff9900
 .bookmark
@@ -127,13 +129,13 @@ th.sorted-desc
     vertical-align middle
 #nextpage
     position fixed
-    right 0px
-    bottom 10px
+    right 2px
+    bottom 2px
     z-index 10000
 #prevpage
     position fixed
-    left -5px
-    bottom 10px
+    left 2px
+    bottom 2px
     z-index 10000
 .language
     margin 10px
