--- a/views/about.jade
+++ b/views/about.jade
@@ -17,59 +17,59 @@
   table#cheatsheet
     tr
       td
-        img.control(src='/static/ico/question.png') 
+        img(src='/static/ico/question.png') 
       td Markdown help
       td
-        img.control(src='/static/ico/box.png')
+        img(src='/static/ico/box.png')
       td Metadata / Categorize
     tr
       td
-        img.control(src='/static/ico/plus.png')
+        img(src='/static/ico/plus.png')
       td Add page / image 
       td
-        img.control(src='/static/ico/minus.png')
+        img(src='/static/ico/minus.png')
       td Delete page / case
     tr
       td
-        img.control(src='/static/ico/eye.png')
+        img(src='/static/ico/eye.png')
       td Case visible
       td
-        img.control(src='/static/ico/eye-prohibition.png')
+        img(src='/static/ico/eye-prohibition.png')
       td Case hidden
     tr
       td
-        img.control(src='/static/ico/arrow-090.png')
+        img(src='/static/ico/arrow-090.png')
       td Move image up
       td
-        img.control(src='/static/ico/arrow-270.png')
+        img(src='/static/ico/arrow-270.png')
       td Move image down
     tr
       td
-        img.control(src='/static/ico/disc.png') 
+        img(src='/static/ico/disc.png') 
       td Save page
       td
-        img.control(src='/static/ico/cross.png')
+        img(src='/static/ico/cross.png')
       td Remove image
     tr
       td
-        img.control(src='/static/ico/pencil.png')
+        img(src='/static/ico/pencil.png')
       td Edit page / text
       td  
-        img.control(src='/static/ico/tick.png')
+        img(src='/static/ico/tick.png')
       td Done
     tr
       td
-        img.control(src='/static/ico/arrow-180.png')
+        img(src='/static/ico/arrow-180.png')
       td Previous page
       td
-        img.control(src='/static/ico/arrow.png') 
+        img(src='/static/ico/arrow.png') 
       td Next page
     tr
       td 
-        img.control(src='/static/ico/star.png')
+        img(src='/static/ico/star.png')
       td Favorite
       td
-        img.control(src='/icons/balloon.png')
+        img(src='/static/ico/balloon.png')
       td Feedback
   br
   hr
